terraform/minikube/modules/meilisearch/istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: "reactory-meilisearch-gateway"
  namespace: reactory
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 7700
      name: meilisearch
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reactory-meilisearch-gateway
  namespace: reactory
spec:
  hosts:
  - "*"
  gateways:
  - reactory-meilisearch-gateway
  tcp:
  - match:
    - port: 7700
    route:
    - destination:
        host: reactory-meilisearch
        port:
          number: 7700
